# opengl-toy

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: Camera.h  DebugHelper.h  GL.h  GLWindow.h  Image.h  InputEvent.h  Shader.h  Sprite.h  Texture.h  Utils.h  config.h  mathlib.h
resource/: frag.fsh  vertex.vsh
src/: Camera.cpp  GLWindow.cpp  Image.cpp  Shader.cpp  Shader.ipp  Sprite.cpp  Texture.cpp  main.cpp
